Flare v1.15

Engine features:

* Add wander_radius and waypoints support for map NPCs
* Add scaling based on item level/player level/primary stats to several Item attributes, such as 'bonus' and 'price'.
* Add 'loot_drops_max' property to Items for limiting the number of drops in a single loot event.
* Horizontal list widgets can now display 2 or fewer options at once

Engine fixes:

* Fixed equipment not being visible on the load game menu in cases where an item is shared across multiple equipment sets.
* Fix potential crash in WidgetTabControl when trying to set an active tab when there is no tab already active.
* Fix unintended file appending when loading mod metadata
* Fix potential crash when tileset image can't be loaded.
* Fix bonuses to primary stats being incorrectly assigned when arbitrary resource stats are used.
* Fix leaked effect animations when an effect's animation property was redefined.
* Fix invalid memory access when consuming a corpse after a map change
* Fix crash when a book has a blank text item
* Fix memory leak from dropped loot
* Fix memory leak when a power's animation property was redefined.
* Display min/max damage and absorb stats on single lines in the Character menu
* Show power base damage type in tooltips if no damage modifier is set
* Fix input state not being correctly reset after using a gamepad analog control
* Increase default audio playback samplerate to 44100Hz from 22050Hz. This can now be adjusted in the user's settings.txt file.
* Fix leaked animation when Power entire power was redefined.
* Fix power.target_neighbor not using the starting_pos as the origin point.

Game updates:
* Limited the number of "unique" items that can drop from a boss to 1 per kill.

Translation updates:

* Spanish (es) update (Jacobo Feijóo, Julvenzor, Eugenio Martínez Seguín)
* Scottish Gaelic (gd) update (GunChleoc)
* Hindi (India) (hi_IN) by Ansh Mishra
* Korean (ko) update (ks k)
* Polish (pl) update (Marcin Serwin)