@@ -2068,11 +2068,11 @@ code {
 
 <p><strong>power.post_effect_src</strong> | <code>predefined_string, float, duration , float : Effect ID, Magnitude, Duration, Chance to apply</code> | Post effect to apply to caster. Duration is in 'ms' or 's'.</p>
 
-<p><strong>power.pre_power</strong> | <code>power_id, float : Power, Chance to cast</code> | Trigger a power immediately when casting this one.</p>
+<p><strong>power.pre_power</strong> | <code>repeatable(power_id, float) : Power, Chance to cast</code> | Trigger a power immediately when casting this one.</p>
 
-<p><strong>power.post_power</strong> | <code>power_id, int : Power, Chance to cast</code> | Trigger a power if the hazard did damage. For 'block' type powers, this power will be triggered when the blocker takes damage.</p>
+<p><strong>power.post_power</strong> | <code>repeatable(power_id, int) : Power, Chance to cast</code> | Trigger a power if the hazard did damage. For 'block' type powers, this power will be triggered when the blocker takes damage.</p>
 
-<p><strong>power.wall_power</strong> | <code>power_id, int : Power, Chance to cast</code> | Trigger a power if the hazard hit a wall.</p>
+<p><strong>power.wall_power</strong> | <code>repeatable(power_id, int) : Power, Chance to cast</code> | Trigger a power if the hazard hit a wall.</p>
 
 <p><strong>power.wall_reflect</strong> | <code>bool</code> | Moving power will bounce off walls and keep going</p>
 
